New layout: translated strings for all languages except ko-KO (which gets en-US for now)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3137 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/cs.xml
+++ b/xslt_suse2/common/l10n/cs.xml
@@ -6,6 +6,8 @@
    <l:gentext key="Authors"         text="Auto&#345;i"/>
    <l:gentext key="TableofContents" text="Obsah"/>
    <l:gentext key="ListofAuthors"   text="Seznam autor&#367;"/>
+   <l:gentext key="Contributor"     text="Přispěvatel"/>
+   <l:gentext key="Contributors"    text="Přispěvatelé"/>
    
    <l:gentext key="FlyerQuickstart" text="RYCHL&#221; &#218;VODN&#205; LIST NOVELL&#x00AE;"/>
    
@@ -16,7 +18,31 @@
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
-   
+
+   <l:gentext key="selectlanguage" text="Vybrat jazyk"/>
+   <l:gentext key="selectformat" text="Vybrat formát"/>
+   <l:gentext key="formathtml" text="Webové stránky"/>
+   <l:gentext key="formatsinglehtml" text="Jedna webová stránka"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="Elektronická kniha (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Obsah"/>
+   <l:gentext key="showcontentsoverview" text="Zobrazit obsah"/>
+   <l:gentext key="find" text="Najít"/>
+   <l:gentext key="navigation" text="Navigace"/>
+   <l:gentext key="sharethispage" text="Sdílet tuto stránku: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Vytisknout tuto stránku"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Platí pro "/>
+   <l:gentext key="totopofpage" text="Nahoru"/>
+
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
