--- a/xslt_suse2/common/l10n/da.xml
+++ b/xslt_suse2/common/l10n/da.xml
@@ -9,6 +9,8 @@
    <l:gentext key="Authors"         text="Forfattere"/>
    <l:gentext key="TableofContents" text="Indhold"/>
    <l:gentext key="ListofAuthors"   text="Forfatteroversigt"/>
+   <l:gentext key="Contributor"     text="Bidragyder"/>
+   <l:gentext key="Contributors"    text="Bidragydere"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; HURTIGVEJLEDNING"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -23,7 +25,31 @@
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
-   
+
+   <l:gentext key="selectlanguage" text="Vælg sprog"/>
+   <l:gentext key="selectformat" text="Vælg format"/>
+   <l:gentext key="formathtml" text="Websider"/>
+   <l:gentext key="formatsinglehtml" text="Enkelt webside"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-bog (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Indhold"/>
+   <l:gentext key="showcontentsoverview" text="Vis indhold"/>
+   <l:gentext key="find" text="Find"/>
+   <l:gentext key="navigation" text="Navigation"/>
+   <l:gentext key="sharethispage" text="Del denne side: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Udskriv denne side"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Gælder for "/>
+   <l:gentext key="totopofpage" text="Top"/>
+
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
