--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -34,8 +34,8 @@
    <l:gentext key="susecareers" text="Jobs"/>
    <l:gentext key="suselegal" text="Rechtliche Hinweise/Impressum"/>
    <l:gentext key="suseabout" text="Über"/>
-   <l:gentext key="susecontact" text="Contact Us"/>
-   <l:gentext key="version.info" text="Bezieht sich auf"/>
+   <l:gentext key="susecontact" text="Kontakt"/>
+   <l:gentext key="version.info" text="Bezieht sich auf "/>
    <l:gentext key="totopofpage" text="Seitenanfang"/>
 
 
