--- a/xslt_suse2/common/l10n/es.xml
+++ b/xslt_suse2/common/l10n/es.xml
@@ -7,21 +7,46 @@
    <l:gentext key="LocalisedLanguageName" text="Espa&#241;ol"/>
    <l:gentext key="ListofAuthors" text="Autores"/>
    <l:gentext key="Authors"       text="Autores"/>
-   <l:gentext key="Contributor"     text="Coagente"/>
-   <l:gentext key="Contributors"    text="Coagentes"/>
-   <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Contributor"     text="Colaborador"/>
+   <l:gentext key="Contributors"    text="Colaboradores"/>
    
    <l:gentext key="FlyerQuickstart" 
    text="NOVELL&#x00AE; GUÍA DE INICIO R&#xc1;PIDO"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Creado por SUSE&#x00AE; con XSL-FO"/>
 
+   <l:gentext key="admonseparator"  text=": "/>
+
    <l:gentext key="hyphenation-push-character-count" text="5"/>
    <l:gentext key="hyphenation-remain-character-count" text="5"/>
    
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Seleccionar idioma"/>
+   <l:gentext key="selectformat" text="Seleccionar formato"/>
+   <l:gentext key="formathtml" text="Páginas Web"/>
+   <l:gentext key="formatsinglehtml" text="Una página Web"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Contenido"/>
+   <l:gentext key="showcontentsoverview" text="Mostrar contenido"/>
+   <l:gentext key="find" text="Buscar"/>
+   <l:gentext key="navigation" text="Navegación"/>
+   <l:gentext key="sharethispage" text="Compartir esta página: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="Correo electrónico"/>
+   <l:gentext key="printthispage" text="Imprimir esta página"/>
+   <l:gentext key="susecareers" text="Empleo"/>
+   <l:gentext key="suselegal" text="Dpto. jurídico"/>
+   <l:gentext key="suseabout" text="Información"/>
+   <l:gentext key="susecontact" text="Póngase en contacto con nosotros"/>
+   <l:gentext key="version.info" text="Se aplica a "/>
+   <l:gentext key="totopofpage" text="Inicio"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
