--- a/xslt_suse2/common/l10n/fi.xml
+++ b/xslt_suse2/common/l10n/fi.xml
@@ -7,17 +7,43 @@
    <l:gentext key="Authors"         text="Tekij&#228;t"/>
    <l:gentext key="TableofContents" text="Sis&#228;lt&#246;"/>
    <l:gentext key="ListofAuthors"   text="Tekij&#228;luettelo"/>
+   <l:gentext key="Contributor"     text="Kirjoittaja"/>
+   <l:gentext key="Contributors"    text="Kirjoittajat"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE;&#45;PIKAOPASKORTTI"/>
-   
+
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Tekij&#228;: SUSE&#x00AE; (XSL&#45;FO&#45;tekniikalla)"/>
 
    <l:gentext key="admonseparator"  text=": "/>
-   
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
+
+   <l:gentext key="selectlanguage" text="Valitse kieli"/>
+   <l:gentext key="selectformat" text="Valitse muoto"/>
+   <l:gentext key="formathtml" text="Web-sivut"/>
+   <l:gentext key="formatsinglehtml" text="Yksittäinen Web-sivu"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-kirja (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Sisältö"/>
+   <l:gentext key="showcontentsoverview" text="Näytä sisältö"/>
+   <l:gentext key="find" text="Etsi"/>
+   <l:gentext key="navigation" text="Siirtyminen"/>
+   <l:gentext key="sharethispage" text="Jaa tämä sivu: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="Sähköposti"/>
+   <l:gentext key="printthispage" text="Tulosta tämä sivu"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Koskee kohdetta "/>
+   <l:gentext key="totopofpage" text="Ylös"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
