--- a/xslt_suse2/common/l10n/fr.xml
+++ b/xslt_suse2/common/l10n/fr.xml
@@ -10,38 +10,40 @@
    <l:gentext key="NOTE" text="REMARQUE"/>
    <l:gentext key="Note" text="Remarque"/>
    <l:gentext key="note" text="Remarque"/>
-   <l:gentext key="Contributor"     text="Coopérateur"/>
-   <l:gentext key="Contributors"    text="Coopérateurs"/>
-   <l:gentext key="admonseparator"  text=" : "/>
+   <l:gentext key="Contributor"     text="Contributeur"/>
+   <l:gentext key="Contributors"    text="Contributeurs"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; FICHE D&#xc9;MARRAGE RAPIDE"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Cr&#xe9;&#xe9; par SUSE&#x00AE; avec XSL-FO"/>
+
+   <l:gentext key="admonseparator"  text=" : "/>
+
    <l:gentext key="hyphenation-push-character-count" text="4"/>
    <l:gentext key="hyphenation-remain-character-count" text="4"/>
 
-   <l:gentext key="selectlanguage" text="Selectionner Langue"/>
-   <l:gentext key="selectformat" text="Selectionner Format"/>
-   <l:gentext key="formathtml" text="Site web"/>
-   <l:gentext key="formatsinglehtml" text="Seule page web"/>
+   <l:gentext key="selectlanguage" text="Sélectionner la langue"/>
+   <l:gentext key="selectformat" text="Sélectionner le format"/>
+   <l:gentext key="formathtml" text="Pages Web"/>
+   <l:gentext key="formatsinglehtml" text="Page Web unique"/>
    <l:gentext key="formatpdf" text="PDF"/>
-   <l:gentext key="formatepub" text="Livre électionique (EPUB)"/>
-   <l:gentext key="contentsoverview" text="Sommaire"/>
-   <l:gentext key="showcontentsoverview" text="Afficher sommaire"/>
-   <l:gentext key="find" text="Chercher"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Contenu"/>
+   <l:gentext key="showcontentsoverview" text="Afficher le contenu"/>
+   <l:gentext key="find" text="Rechercher"/>
    <l:gentext key="navigation" text="Navigation"/>
-   <l:gentext key="sharethispage" text="Recommender cette page : "/>
+   <l:gentext key="sharethispage" text="Partager cette page : "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="shareviagoogleplus" text="Google+"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
-   <l:gentext key="shareviaemail" text="Courriel"/>
+   <l:gentext key="shareviaemail" text="Message électronique"/>
    <l:gentext key="printthispage" text="Imprimer cette page"/>
    <l:gentext key="susecareers" text="Carrières"/>
    <l:gentext key="suselegal" text="Mentions légales"/>
    <l:gentext key="suseabout" text="Infos"/>
    <l:gentext key="susecontact" text="Contactez-nous"/>
-   <l:gentext key="version.info" text="Refere-se à "/>
-   <l:gentext key="totopofpage" text="Au début"/>
+   <l:gentext key="version.info" text="S'applique à "/>
+   <l:gentext key="totopofpage" text="Haut"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
