--- a/xslt_suse2/common/l10n/hu.xml
+++ b/xslt_suse2/common/l10n/hu.xml
@@ -9,16 +9,42 @@
    <l:gentext key="Authors"         text="Szerz&#337;k"/>
    <l:gentext key="TableofContents" text="Tartalomjegyz&#233;k"/>
    <l:gentext key="ListofAuthors"   text="Szerz&#337;lista"/>
+   <l:gentext key="Contributor"     text="Szerző"/>
+   <l:gentext key="Contributors"    text="Szerzők"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; GYORSKALAUZ K&#xc1;RTYA"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="K&#233;sz&#237;tette: SUSE&#x00AE; XSL-FO-val"/>
 
    <l:gentext key="admonseparator"  text=": "/>
-   
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Nyelv választása"/>
+   <l:gentext key="selectformat" text="Formátum beállítása"/>
+   <l:gentext key="formathtml" text="Weboldalak"/>
+   <l:gentext key="formatsinglehtml" text="Egyetlen weboldal"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-könyv (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Tartalom"/>
+   <l:gentext key="showcontentsoverview" text="Tartalom megjelenítése"/>
+   <l:gentext key="find" text="Keresés"/>
+   <l:gentext key="navigation" text="Navigáció"/>
+   <l:gentext key="sharethispage" text="Az oldal megosztása: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Az oldal nyomtatása"/>
+   <l:gentext key="susecareers" text="Állások"/>
+   <l:gentext key="suselegal" text="Jogi"/>
+   <l:gentext key="suseabout" text="Névjegy"/>
+   <l:gentext key="susecontact" text="Lépjen velünk kapcsolatba"/>
+   <l:gentext key="version.info" text="Dokumentum tárgya: "/>
+   <l:gentext key="totopofpage" text="A tetejére"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
