--- a/xslt_suse2/common/l10n/it.xml
+++ b/xslt_suse2/common/l10n/it.xml
@@ -7,17 +7,42 @@
    <l:gentext key="LocalisedLanguageName" text="Italiano"/>
    <l:gentext key="ListofAuthors" text="Autori"/>
    <l:gentext key="Authors"       text="Autori"/>
-   <l:gentext key="Contributor"   text="Contributore"/>
-   <l:gentext key="Contributors"  text="Contributori"/>   
-   <l:gentext key="admonseparator"  text=": "/>
-   
+   <l:gentext key="Contributor"   text="Collaboratore"/>
+   <l:gentext key="Contributors"  text="Collaboratori"/>
+
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHEDA INTRODUTTIVA "/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Creato da SUSE&#x00AE; con XSL-FO"/>
-   
+
+   <l:gentext key="admonseparator"  text=": "/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Selezione della lingua"/>
+   <l:gentext key="selectformat" text="Selezione del formato"/>
+   <l:gentext key="formathtml" text="Pagine Web"/>
+   <l:gentext key="formatsinglehtml" text="Pagina Web singola"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Contenuto"/>
+   <l:gentext key="showcontentsoverview" text="Mostra contenuto"/>
+   <l:gentext key="find" text="Trova"/>
+   <l:gentext key="navigation" text="Navigazione"/>
+   <l:gentext key="sharethispage" text="Condividi pagina: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Stampa pagina"/>
+   <l:gentext key="susecareers" text="Opportunità di lavoro"/>
+   <l:gentext key="suselegal" text="Informazioni legali"/>
+   <l:gentext key="suseabout" text="Informazioni"/>
+   <l:gentext key="susecontact" text="Contattateci"/>
+   <l:gentext key="version.info" text="Si applica a "/>
+   <l:gentext key="totopofpage" text="Su"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
