--- a/xslt_suse2/common/l10n/ja.xml
+++ b/xslt_suse2/common/l10n/ja.xml
@@ -6,17 +6,44 @@
    <l:gentext key="LocalisedLanguageName" text="&#26085;&#26412;&#35486;"/>
    <l:gentext key="ListofAuthors" text="&#33879;&#32773;"/>
    <l:gentext key="TableofContents" text="&#30446;&#27425;"/>
-   <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Contributor"     text="コントリビュータ"/>
+   <l:gentext key="Contributors"    text="コントリビュータ"/>
 
    <l:gentext key="FlyerQuickstart" 
      text="NOVELL&#x00AE; &#x30af;&#x30a4;&#x30c3;&#x30af;&#x30b9;&#x30bf;&#x30fc;&#x30c8;&#x30ab;&#x30fc;&#x30c9;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Created by SUSE&#x00AE; with XSL-FO"/>
-   
+
+   <l:gentext key="admonseparator"  text=": "/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
- 
+
+   <l:gentext key="selectlanguage" text="言語の選択"/>
+   <l:gentext key="selectformat" text="フォーマットの選択"/>
+   <l:gentext key="formathtml" text="Webページ"/>
+   <l:gentext key="formatsinglehtml" text="単一のWebページ"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="電子書籍(EPUB)"/>
+   <l:gentext key="contentsoverview" text="コンテンツ"/>
+   <l:gentext key="showcontentsoverview" text="コンテンツの表示"/>
+   <l:gentext key="find" text="検索"/>
+   <l:gentext key="navigation" text="ナビゲーション"/>
+   <l:gentext key="sharethispage" text="このページを共有: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="電子メール"/>
+   <l:gentext key="printthispage" text="このページを印刷"/>
+   <l:gentext key="susecareers" text="採用情報"/>
+   <l:gentext key="suselegal" text="利用条件"/>
+   <l:gentext key="suseabout" text="会社情報"/>
+   <l:gentext key="susecontact" text="お問い合わせ先"/>
+   <l:gentext key="version.info" text="適用先"/>
+   <l:gentext key="totopofpage" text="トップへ"/>
+
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
