--- a/xslt_suse2/common/l10n/lt_lt.xml
+++ b/xslt_suse2/common/l10n/lt_lt.xml
@@ -8,6 +8,8 @@
    <l:gentext key="Authors"         text="Autoriai"/>
    <l:gentext key="TableofContents" text="Turinys"/>
    <l:gentext key="ListofAuthors"   text="Autorių sąrašas"/>
+   <l:gentext key="Contributor"     text="Bendradarbis"/>
+   <l:gentext key="Contributors"    text="Bendradarbiai"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; ATMINTINĖ"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -21,6 +23,30 @@
    <l:dingbat key="guimenuendquote" text=""/>
    <l:dingbat key="startquote" text="&#8222;"/>
    <l:dingbat key="endquote" text="&#8220;"/>
+
+   <l:gentext key="selectlanguage" text="Pasirinkti kalbą"/>
+   <l:gentext key="selectformat" text="Pasirinkti formatą"/>
+   <l:gentext key="formathtml" text="Tinklalapiai"/>
+   <l:gentext key="formatsinglehtml" text="Vienas tinklalapis"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="El. knyga (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Turinys"/>
+   <l:gentext key="showcontentsoverview" text="Rodyti turinį"/>
+   <l:gentext key="find" text="Rasti"/>
+   <l:gentext key="navigation" text="Naršymas"/>
+   <l:gentext key="sharethispage" text="Bendrinti šį puslapį: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="El. paštas"/>
+   <l:gentext key="printthispage" text="Spausdinti šį puslapį"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Skirta"/>
+   <l:gentext key="totopofpage" text="Viršus"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
