--- a/xslt_suse2/common/l10n/nl.xml
+++ b/xslt_suse2/common/l10n/nl.xml
@@ -7,6 +7,8 @@
    <l:gentext key="Authors"         text="Auteurs"/>
    <l:gentext key="TableofContents" text="Inhoud"/>
    <l:gentext key="ListofAuthors"   text="Lijst met auteurs"/>
+   <l:gentext key="Contributor"     text="Medewerker"/>
+   <l:gentext key="Contributors"    text="Medewerkers"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; BEKNOPTE HANDLEIDING"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -16,7 +18,7 @@
    
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
 
    <l:dingbat key="startquote" text="&#34;"/>
    <l:dingbat key="endquote" text="&#34;"/>
@@ -24,6 +26,29 @@
    <l:dingbat key="nestedendquote" text="&#34;"/>
    <l:dingbat key="singlestartquote" text="&#34;" lang="nl"/>
    <l:dingbat key="singleendquote" text="&#34;" lang="nl"/>
+
+   <l:gentext key="selectlanguage" text="Taal selecteren"/>
+   <l:gentext key="selectformat" text="Indeling selecteren"/>
+   <l:gentext key="formathtml" text="Webpagina's"/>
+   <l:gentext key="formatsinglehtml" text="Enkele webpagina"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Inhoud"/>
+   <l:gentext key="showcontentsoverview" text="Inhoud weergeven"/>
+   <l:gentext key="find" text="Zoeken"/>
+   <l:gentext key="navigation" text="Navigatie"/>
+   <l:gentext key="sharethispage" text="Deze pagina delen: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Deze pagina afdrukken"/>
+   <l:gentext key="susecareers" text="Vacatures"/>
+   <l:gentext key="suselegal" text="Juridische kennisgevingen"/>
+   <l:gentext key="suseabout" text="Informatie"/>
+   <l:gentext key="susecontact" text="Contact met ons opnemen"/>
+   <l:gentext key="version.info" text="Van toepassing op "/>
+   <l:gentext key="totopofpage" text="Boven"/>
 
 
    <!-- WARNING: 
