--- a/xslt_suse2/common/l10n/no.xml
+++ b/xslt_suse2/common/l10n/no.xml
@@ -7,16 +7,42 @@
    <l:gentext key="Authors"         text="Forfattere"/>
    <l:gentext key="TableofContents" text="Innhold"/>
    <l:gentext key="ListofAuthors"   text="Forfatterliste"/>
+   <l:gentext key="Contributor"     text="Bidragsyter"/>
+   <l:gentext key="Contributors"    text="Bidragsytere"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; KOMME I GANG-KORT"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Opprettet av SUSE&#x00AE; med XSL-FO"/>
 
    <l:gentext key="admonseparator"  text=": "/>
-   
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
+
+   <l:gentext key="selectlanguage" text="Velg språk"/>
+   <l:gentext key="selectformat" text="Velg format"/>
+   <l:gentext key="formathtml" text="Websider"/>
+   <l:gentext key="formatsinglehtml" text="Én webside"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-bok (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Innhold"/>
+   <l:gentext key="showcontentsoverview" text="Vis innhold"/>
+   <l:gentext key="find" text="Søk"/>
+   <l:gentext key="navigation" text="Navigasjon"/>
+   <l:gentext key="sharethispage" text="Del denne siden: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-post"/>
+   <l:gentext key="printthispage" text="Skriv ut denne siden"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Gjelder "/>
+   <l:gentext key="totopofpage" text="Øverst"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
