--- a/xslt_suse2/common/l10n/pl.xml
+++ b/xslt_suse2/common/l10n/pl.xml
@@ -7,6 +7,9 @@
    <l:gentext key="Authors" text="Autorzy"/>
    <l:gentext key="TableofContents" text="Spis treści"/>
    <l:gentext key="ListofAuthors" text="Lista autorów"/>
+   <!-- The following two will need better translation-->
+   <l:gentext key="Contributor"     text="Autor"/>
+   <l:gentext key="Contributors"    text="Autorzy"/>
 
    <l:gentext key="FlyerQuickstart" text="SKRÓCONA INSTRUKCJA OBSŁUGI NOVELL&#x00AE;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -17,6 +20,30 @@
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Wybierz język"/>
+   <l:gentext key="selectformat" text="Wybierz format"/>
+   <l:gentext key="formathtml" text="Strony WWW"/>
+   <l:gentext key="formatsinglehtml" text="Pojedyncza strona WWW"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Spis treści"/>
+   <l:gentext key="showcontentsoverview" text="Pokaż spis treści"/>
+   <l:gentext key="find" text="Znajdź"/>
+   <l:gentext key="navigation" text="Nawigacja"/>
+   <l:gentext key="sharethispage" text="Udostępnij tę stronę: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Drukuj tę stronę"/>
+   <l:gentext key="susecareers" text="Kariera"/>
+   <l:gentext key="suselegal" text="Aspekty prawne"/>
+   <l:gentext key="suseabout" text="Informacje"/>
+   <l:gentext key="susecontact" text="Skontaktuj się z nami"/>
+   <l:gentext key="version.info" text="Drukuj tę stronę"/>
+   <l:gentext key="totopofpage" text="Do góry"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
