--- a/xslt_suse2/common/l10n/pt_br.xml
+++ b/xslt_suse2/common/l10n/pt_br.xml
@@ -7,15 +7,42 @@
    <l:gentext key="SeeAlso" text="Veja tamb&#233;m"/>
    <l:gentext key="TableofContents" text="Sum&#225;rio"/>
    <l:gentext key="ListofAuthors" text="Lista de Autores"/>
-   <l:gentext key="admonseparator"  text=": "/>
-   
+   <l:gentext key="Contributor"     text="Colaborador"/>
+   <l:gentext key="Contributors"    text="Colaboradores"/>
+
    <l:gentext key="FlyerQuickstart" text="GUIA R&#193;PIDO NOVELL&#x00AE;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Criado por SUSE&#x00AE; com XSL-FO"/>
 
+   <l:gentext key="admonseparator"  text=": "/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Selecionar Idioma"/>
+   <l:gentext key="selectformat" text="Selecionar Formato"/>
+   <l:gentext key="formathtml" text="Páginas da Web"/>
+   <l:gentext key="formatsinglehtml" text="Página da Web Única"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Conteúdo"/>
+   <l:gentext key="showcontentsoverview" text="Mostrar Conteúdo"/>
+   <l:gentext key="find" text="Localizar"/>
+   <l:gentext key="navigation" text="Navegação"/>
+   <l:gentext key="sharethispage" text="Compartilhar esta página: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-mail"/>
+   <l:gentext key="printthispage" text="Imprimir esta página"/>
+   <l:gentext key="susecareers" text="Carreiras"/>
+   <l:gentext key="suselegal" text="Jurídico"/>
+   <l:gentext key="suseabout" text="Sobre"/>
+   <l:gentext key="susecontact" text="Entre em contato conosco"/>
+   <l:gentext key="version.info" text="Aplica-se a "/>
+   <l:gentext key="totopofpage" text="Topo"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are doing!
