--- a/xslt_suse2/common/l10n/ru.xml
+++ b/xslt_suse2/common/l10n/ru.xml
@@ -7,6 +7,8 @@
    <l:gentext key="Authors"         text="Авторы"/>
    <l:gentext key="TableofContents" text="Содержание"/>
    <l:gentext key="ListofAuthors"   text="Список авторов"/>
+   <l:gentext key="Contributor"     text="Участник"/>
+   <l:gentext key="Contributors"    text="Участники"/>
 
    <l:gentext key="FlyerQuickstart" text="КАРТОЧКА БЫСТРОГО СТАРТА NOVELL&#x00AE;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -17,6 +19,30 @@
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Выбор языка"/>
+   <l:gentext key="selectformat" text="Выбор формата"/>
+   <l:gentext key="formathtml" text="Веб-страницы"/>
+   <l:gentext key="formatsinglehtml" text="Отдельная веб-страница"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="Электронная книга (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Содержание"/>
+   <l:gentext key="showcontentsoverview" text="Показать содержание"/>
+   <l:gentext key="find" text="Найти"/>
+   <l:gentext key="navigation" text="Навигация"/>
+   <l:gentext key="sharethispage" text="Рассказать об этой странице: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="Электронная почта"/>
+   <l:gentext key="printthispage" text="Распечатать эту страницу"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Относится к "/>
+   <l:gentext key="totopofpage" text="Наверх"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
