--- a/xslt_suse2/common/l10n/sv.xml
+++ b/xslt_suse2/common/l10n/sv.xml
@@ -7,16 +7,41 @@
    <l:gentext key="Authors"         text="F&#246;rfattare"/>
    <l:gentext key="TabellofContents" text="Inneh&#229;ll"/>
    <l:gentext key="ListofAuthors"   text="Lista &#246;ver f&#246;rfattare"/>
+   <l:gentext key="Contributor"     text="Deltagare"/>
+   <l:gentext key="Contributors"    text="Deltagare"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SNABBSTARTSKORT"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Skapat av SUSE&#x00AE; med XSL-FO"/>
 
    <l:gentext key="admonseparator"  text=": "/>
-   
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:gentext key="selectlanguage" text="Välj språk"/>
+   <l:gentext key="selectformat" text="Välj format"/>
+   <l:gentext key="formathtml" text="Webbsidor"/>
+   <l:gentext key="formatsinglehtml" text="En webbsida"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-bok (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Innehåll"/>
+   <l:gentext key="showcontentsoverview" text="Visa innehåll"/>
+   <l:gentext key="find" text="Hitta"/>
+   <l:gentext key="navigation" text="Navigering"/>
+   <l:gentext key="sharethispage" text="Dela den här sidan: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-post"/>
+   <l:gentext key="printthispage" text="Skriv ut sidan"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Gäller "/>
+   <l:gentext key="totopofpage" text="Upp"/>
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
