--- a/xslt_suse2/common/l10n/zh_cn.xml
+++ b/xslt_suse2/common/l10n/zh_cn.xml
@@ -7,11 +7,38 @@
    <l:gentext key="admonseparator"  text="&#65306;"/>
    <l:gentext key="ListofAuthors" text="&#20316;&#32773;&#21015;&#34920;"/>
    <l:gentext key="Authors" text="&#20316;&#32773;&#21015;&#34920;"/>
+   <l:gentext key="Contributor"     text="贡献者"/>
+   <l:gentext key="Contributors"    text="贡献者"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; &#x5feb;&#x901f;&#x5165;&#x95e8;&#x5361;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="&#x7531; SUSE&#x00AE; &#x4f7f;&#x7528; XSL-FO &#x521b;&#x5efa;"/>   
-   
+
+   <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="selectlanguage" text="选择语言"/>
+   <l:gentext key="selectformat" text="选择格式"/>
+   <l:gentext key="formathtml" text="网页"/>
+   <l:gentext key="formatsinglehtml" text="单一网页"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-bok (EPUB)"/>
+   <l:gentext key="contentsoverview" text="内容"/>
+   <l:gentext key="showcontentsoverview" text="显示内容"/>
+   <l:gentext key="find" text="查找"/>
+   <l:gentext key="navigation" text="导航"/>
+   <l:gentext key="sharethispage" text="分享此页： "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="电子邮件"/>
+   <l:gentext key="printthispage" text="打印此页"/>
+   <l:gentext key="susecareers" text="职业"/>
+   <l:gentext key="suselegal" text="法律"/>
+   <l:gentext key="suseabout" text="关于"/>
+   <l:gentext key="susecontact" text="联系我们"/>
+   <l:gentext key="version.info" text="适用于"/>
+   <l:gentext key="totopofpage" text="顶部"/>
+
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
