--- a/xslt_suse2/common/l10n/zh_tw.xml
+++ b/xslt_suse2/common/l10n/zh_tw.xml
@@ -7,7 +7,9 @@
    <l:gentext key="ListofAuthors" text="&#x539f;&#x8457;&#x8005;&#x540d;&#x55ae;"/>
    <l:gentext key="Authors" text="&#x539f;&#x8457;&#x8005;&#x540d;&#x55ae;"/>
    <l:gentext key="admonseparator"  text="&#65306;"/>
-  
+   <l:gentext key="Contributor"     text="貢獻者"/>
+   <l:gentext key="Contributors"    text="貢獻者"/>
+
    <l:gentext key="TableofContents" text="&#30446;&#37636;"/>
    <l:gentext key="tableofcontents" text="&#30446;&#37636;"/>
    <l:gentext key="index symbols" text="&#31526;&#34399;"/>
@@ -16,10 +18,36 @@
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="&#x7531; SUSE® &#x5229;&#x7528; XSL-FO &#x88fd;&#x4f5c;"/>
 
+   <l:gentext key="admonseparator"  text=": "/>
+
    <l:dingbat key="guimenustartquote" text="&#x300c;"/><!-- ã -->
    <l:dingbat key="guimenuendquote" text="&#x300d;"/><!-- ã -->
    <l:dingbat key="startquote" text="&#x300c;"/>
    <l:dingbat key="endquote" text="&#x300d;"/>
+
+   <l:gentext key="selectlanguage" text="選取語言"/>
+   <l:gentext key="selectformat" text="選取格式"/>
+   <l:gentext key="formathtml" text="網頁"/>
+   <l:gentext key="formatsinglehtml" text="單一網頁"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-bok (EPUB)"/>
+   <l:gentext key="contentsoverview" text="內容"/>
+   <l:gentext key="showcontentsoverview" text="顯示內容"/>
+   <l:gentext key="find" text="尋找"/>
+   <l:gentext key="navigation" text="導覽"/>
+   <l:gentext key="sharethispage" text="共享此頁面︰ "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="電子郵件"/>
+   <l:gentext key="printthispage" text="列印此頁面"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="套用至"/>
+   <l:gentext key="totopofpage" text="頂端"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
