--- a/xslt_suse2/common/l10n/ko.xml
+++ b/xslt_suse2/common/l10n/ko.xml
@@ -5,20 +5,45 @@
 
    <l:gentext key="LocalisedLanguageName" text="&#54620;&#44397;&#50612;"/>
    <l:gentext key="SeeAlso"         text="&#52280;&#51312;"/>
-   <l:gentext key="Authors"         text="&#51089;&#49457;&#51088;"/>   
+   <l:gentext key="Authors"         text="&#51089;&#49457;&#51088;"/>
    <l:gentext key="TableofContents" text="&#47785;&#52264;"/>
    <l:gentext key="ListofAuthors" text="&#51200;&#51088; &#47785;&#47197;"/>
+   <l:gentext key="Contributor"     text="Contributor"/>
+   <l:gentext key="Contributors"    text="Contributors"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; &#48736;&#47480;&#32;&#49884;&#51089;&#32;&#52852;&#46300;"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="SUSE&#x00AE; with XSL-FO&#50640;&#32;&#51032;&#54644;&#32;&#49373;&#49457;&#46120;"/>   
-   
+
    <l:gentext key="admonseparator"  text=": "/>
 
-   
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
+
+   <l:gentext key="selectlanguage" text="Select Language"/>
+   <l:gentext key="selectformat" text="Select Format"/>
+   <l:gentext key="formathtml" text="Web Pages"/>
+   <l:gentext key="formatsinglehtml" text="Single Web Page"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Contents"/>
+   <l:gentext key="showcontentsoverview" text="Show Contents"/>
+   <l:gentext key="find" text="Find"/>
+   <l:gentext key="navigation" text="Navigation"/>
+   <l:gentext key="sharethispage" text="Share this page: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-Mail"/>
+   <l:gentext key="printthispage" text="Print this page"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Applies to "/>
+   <l:gentext key="totopofpage" text="Top"/>
+
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
